// proto/movie.proto
syntax = "proto3";

package proto;

option go_package = "./api/pb";

message Movie {
    string id = 1;
    string title = 2;
    string genre = 3;
}
message User {
    string id = 1;
    string name = 2;
    string age = 3;
    string email = 4;
    string phone = 5;
    string password = 6;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}
message GetUserRequest {
    User user = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateMovieRequest{
    Movie movie = 1;
}

message CreateMovieResponse{
    Movie movie = 1;
}

message ReadMovieRequest{
    string id =1;
}

message ReadMovieResponse{
    Movie movie =1;
}

message ReadMoviesRequest{
  
}

message ReadMoviesResponse{
    repeated Movie movies =1;
}

message UpdateMovieRequest{
    Movie movie =1;
}

message UpdateMovieResponse{
    Movie movie =1;
}

message DeleteMovieRequest{
    string id =1;
}

message DeleteMovieResponse{
    bool success =1;
}
service UserService{
    rpc Login(GetUserRequest) returns (GetUserResponse){}
    rpc RegisterUser(CreateUserRequest) returns (CreateUserResponse){}
}
service MovieService{
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse){}
    rpc GetMovie(ReadMovieRequest) returns (ReadMovieResponse){}
    rpc GetMovies(ReadMoviesRequest) returns (ReadMoviesResponse){}
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse){}
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse){}
}
